--- a/mneg-tlp/mneg-tlp-web/src/main/webapp/static/css/ejemplo.css
+++ b/mneg-tlp/mneg-tlp-web/src/main/webapp/static/css/ejemplo.css
@@ -32,3 +32,24 @@ pre {
 	font-size: 12px;
 }
 
+body{font-family:arial;font-size:12px}
+
+input{
+	font-family:arial; 				
+	background-color:white; 
+	border:#CDCDCD; 
+	border-style:solid; 
+	border-top-width:1px; 
+	border-right-width:2px; 
+	border-bottom-width:2px; 
+	border-left-width:1px; 
+	border-radius:5px; 								
+}
+
+table{width:100%}
+.right{text-align:right; width:50%;}
+.left{text-align:left; width:50%;}
+.center{text-align:center;}
+.validacion{color:red;}
+.validado{color:green;}
+
